# rch-sysinit

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  CONTRIBUTING.md  Makefile  README.md  SECURITY_AUDIT.md  ansible.cfg  install.sh  mise.toml  playbook.yml  pyproject.toml  requirements-dev.txt  requirements.yml
.github/workflows/: ci.yml
inventory/: hosts.yml
inventory/group_vars/: all.yaml  sysinit.yml
inventory/host_vars/: local-dev.yml
roles/sysinit/defaults/: main.yml
roles/sysinit/files/: thinkfan.conf
roles/sysinit/meta/: main.yml
roles/sysinit/tasks/: apt.yml  aur.yml  main.yml
roles/sysinit/tasks/tools/: aws-ssm.yml  aws-vault.yml  chrome.yml  dbeaver.yml  docker.yml  mise.yml  mkcert.yml  opass.yml  postman.yml  slack.yml  ssm-manager-plugin.yml  starship.yml  thinkfan.yml
roles/sysinit/tests/: test.yml
roles/sysinit/vars/: Archlinux.yml  Debian.yml  Ubuntu.yml
